made login and register page nicer

--- a/application/templates/search.html
+++ b/application/templates/search.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="col-1">
                     <button type=submit class="btn btn-outline-secondary bg-white border-start-0 border rounded-pill ms-n3">
-                        <i class="fa fa-search"></i> Search
+                        Search
                     </button>
                 </div>
             </div>
