--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -7,28 +7,32 @@ Login Page
 {% block content %}
 <body class="text-center">
     <div class="container">
-        <form method="POST" class="form-signin" style="color: white">
-            <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
-            <br>
-
-            {{ form.csrf_token }}
-
-            {{ form.username.label() }}
-            {{ form.username(class="form-control", placeholder="Username") }}
-
-            {{ form.password.label() }}
-            {{ form.password(class="form-control", placeholder="Password") }}
-            
-            <br>
-
-            <div class="checkbox mb-3">
-                <h6>You don't have an account yet?</h6>
-                <a class="btn btn-secondary btn-sm" href="{{ url_for('register_page') }}">Register</a>
+        <div class="row justify-content-center align-items-center">
+            <div class="col-4">
+                <form method="POST" class="form-signin" style="color: white">
+                    <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
+                    <br>
+        
+                    {{ form.csrf_token }}
+        
+                    {{ form.username.label() }}
+                    {{ form.username(class="form-control", placeholder="Username") }}
+        
+                    {{ form.password.label() }}
+                    {{ form.password(class="form-control", placeholder="Password") }}
+                    
+                    <br>
+        
+                    <div class="checkbox mb-3">
+                        <h6>You don't have an account yet?</h6>
+                        <a class="btn btn-secondary btn-sm" href="{{ url_for('register_page') }}">Register</a>
+                    </div>
+        
+                    {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
+        
+                </form>
             </div>
-
-            {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
-
-        </form>
+        </div>
     </div>
 
 </body>
