--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -12,33 +12,37 @@ Register Page
             Please create your Account
         </h1>
         <br>
-        <form method="POST" class="form-register" style="color: white;">
-            {{ form.hidden_tag() }}
-            
-            {{ form.username.label() }}
-            {{ form.username(class="form-control", placeholder="User Name") }}
+        <div class="row justify-content-center align-items-center">
+            <div class="col-4">
+                <form method="POST" class="form-register" style="color: white;">
+                    {{ form.hidden_tag() }}
+                    
+                    {{ form.username.label() }}
+                    {{ form.username(class="form-control", placeholder="User Name") }}
+                
+                    {{ form.email_address.label() }}
+                    {{ form.email_address(class="form-control", placeholder="Email") }}
         
-            {{ form.email_address.label() }}
-            {{ form.email_address(class="form-control", placeholder="Email") }}
-
-            {{ form.password1.label() }}
-            {{ form.password1(class="form-control", placeholder="Password") }}
-
-            {{ form.password2.label() }}
-            {{ form.password2(class="form-control", placeholder="Password") }}
-
-            <br>
-
-            <div class="checkbox mb-3">
-                <h6>Already have an account?</h6>
-                <a class="btn btn-secondary btn-sm" href="{{ url_for('login_page') }}">Login</a>
+                    {{ form.password1.label() }}
+                    {{ form.password1(class="form-control", placeholder="Password") }}
+        
+                    {{ form.password2.label() }}
+                    {{ form.password2(class="form-control", placeholder="Password") }}
+        
+                    <br>
+        
+                    <div class="checkbox mb-3">
+                        <h6>Already have an account?</h6>
+                        <a class="btn btn-secondary btn-sm" href="{{ url_for('login_page') }}">Login</a>
+                    </div>
+        
+                    {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
+        
+                    <br>
+                    <br>
+                </form>
             </div>
-
-            {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
-
-            <br>
-            <br>
-        </form>
+        </div>
     </div> 
 </body>
 <style>
