--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -33,7 +33,7 @@
         <div class="carousel-caption d-none d-md-block">
             <h1 class="display-4 font-weight-normal">Create a Wishlist</h1>
             <p class="lead font-weight-normal">If you have a list of songs you'd like to learn in the future, then add them to your Wishlist! When you finished learning them, you can easily add them to your My Songs list!</p>
-            <a class="btn btn-info btn-lg" href="{{ url_for('register_page') }}">Sing up to use this feature</a>
+            <a class="btn btn-info btn-lg" href="{{ url_for('wishlist_page') }}">Sing up to use this feature</a>
         </div>
     </div>
     </div>
