--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -2,12 +2,15 @@
 <html lang="en">
 
     <head>
-        <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" crossorigin="anonymous">
+
+        <!-- Load font awesome icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
         <title>
             {% block title %}
 
@@ -15,7 +18,6 @@
         </title>
     </head>
     <body>
-        <!-- Navbar here -->
         <nav id="navigation" class="navbar navbar-expand-md navbar-dark bg-dark">
             <img id="icon" src="https://cdn-icons-png.flaticon.com/512/93/93013.png" class="img-responsive" width="50">
             <a class="navbar-brand" href="#">Learn Guitar</a>
@@ -102,7 +104,8 @@
         <p>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
                 href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
         <p>Image by <a href="https://pixabay.com/users/pexels-2286921/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1851426">Pexels</a> 
-            from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1851426">cmdPixabay</a></p>
+            from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1851426">Pixabay</a></p>
+        <p>Tabs from <a href="https://www.guitartabs.cc/">Guitar Tab Universe</a></p>
     </footer>
     <style>
         body {
