--- a/application/templates/helpers/video_modals.html
+++ b/application/templates/helpers/video_modals.html
@@ -20,17 +20,15 @@
                 <table class="table table-hover table-dark">
                     <thead>
                         <tr>
-                            <!-- Your Columns HERE -->
                             <th scope="col">Thumbnail</th>
                             <th scope="col">Title</th>
                             <th scope="col">Options</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- Your rows inside the table HERE: -->
                             {% for video in videos %}
                                 <tr>
-                                    <td><img src={{ video.thumbnail_url }} class="img-responsive"></td>
+                                    <td><img src="{{ video.thumbnail_url }}" class="img-responsive"></td>
                                     <td>{{ video.name }}</td>
                                     <td>
                                         <form action="{{ url_for('tab_page') }}" method=post class=video-for-song>
